-- Almost all changes listed herein are new as of 2016. --

2016-08-08  Bob Weiner  <rsw@gnu.org>

* hmouse-tag.el (smart-asm-include-file, smart-c-include-file): Simplified conditionals a bit.

* hpath.el (hpath:is-p): Fixed improper parsing issue with hash links that included commas such as:
    "DEMO#Grep, Occurrence, Debugger and Compiler Error Buttons, and Cscope Analyzer".

* Demo (Org Mode):
  man/hyperbole.texi (Implicit Buttons):
  hsys-org.el (org-mode): Changed so if not at an end of line, on an org mode link or on an existing heading,
    then invokes the Org mode standard binding of M-RET, (org-meta-return).

2016-08-07  Bob Weiner  <rsw@gnu.org>

* hpath.el (hpath:markup-link-anchor-regexp, hpath:to-markup-anchor): Modified to support hash-style links
    to Emacs outline file section headlines, matching as is done with Github-style Markdown section links.
  DEMO:
  man/hyperbole.texi: Updated to document the above change.

* hypb.el (hypb:file-major-mode): Added.

2016-08-06  Bob Weiner  <rsw@gnu.org>

* man/hyperbole.texi (Customization): Renamed from Configuration.
                     (Web Search Engines): Added this section under Customization.
                     (HyControl): Added FramesControl key sequence.
                     (Smart Key - Smart Scrolling): Documented {action,assist}-key-eol-function variables.

* hsmail.el (mail-indent-citation, mail-yank-original): Updated for Emacs 25 compatibility.

2016-08-05  Bob Weiner  <rsw@gnu.org>

* hibtypes.el (annot-bib): Added markdown-mode to the excluded list to avoid conflict with its links.
              (markdown-internal-link): Added to follow internal Markdown links.
  man/hyperbole.texi: (Implicit Buttons): Added markdown-internal-link.

* hsys-www.el: Renamed from hsys-w3.el since it is not related to the Emacs W3 web browser any longer.

* Demo (HTML and Markdown Hash Links): Added this section.
  hibtypes.el (pathname):