@@ -13,7 +13,8 @@
 ;;
 ;;   This defines a context-sensitive implicit button type, org-mode, triggered
 ;;   when the major mode is org-mode and point is anywhere other than
-;;   the end of a line.  When:
+;;   the end of a line.
+;;   When:
 ;;     on an Org mode link - displays the link referent
 ;;     on an Org mode heading - cycles through the available display
 ;;       views for that heading
@@ -25,6 +26,7 @@
 ;;; ************************************************************************
 
 (require 'hbut)
+(require 'org)
 
 ;;; ************************************************************************
 ;;; Public Button Types
@@ -35,21 +37,23 @@
 The variable, `browse-url-browser-function', customizes the url browser that
 is used for urls.  Valid values of this variable include `browse-url-default-browser'
 and `browse-url-generic'."
-  (cond ((org-link-at-p)
-	 (hact 'org-link nil))
-	((org-heading-at-p)
-	 (hact 'org-cycle nil))
-	(t (hact 'org-meta-return))))
+  (when (eq major-mode 'org-mode)
+    (cond ((org-link-at-p)
+	   (hact 'org-link nil))
+	  ((org-at-heading-p)
+	   (hact 'org-cycle nil))
+	  (t (hact 'org-meta-return)))))
 
 (defun org-mode:help (&optional _but)
   "If on an Org mode heading, cycles through views of the whole buffer outline.
 If on an Org mode link, displays standard Hyperbole help."
-  (cond ((and (org-heading-at-p) (not (org-link-at-p)))
-	 (org-global-cycle nil))
-	;; Shows help for an Org mode link; if not on a link, this
-	;; will not be called.
-	(t (hkey-help current-prefix-arg)))
-  t)
+  (when (eq major-mode 'org-mode)
+    (cond ((org-link-at-p)
+	   (hkey-help current-prefix-arg)
+	   t)
+	  ((org-at-heading-p)
+	   (org-global-cycle nil)
+	   t))))
 
 (defact org-link (link)
   "Follows an Org mode LINK.  If LINK is nil, follows the link at point."
@@ -61,15 +65,11 @@ If on an Org mode link, displays standard Hyperbole help."
 ;;; Public functions
 ;;; ************************************************************************
 
-(defun org-heading-at-p ()
-  (require 'org)
-  (and (eq major-mode 'org-mode) (org-at-heading-p)))
-
+;; Assumes caller has already checked that the current buffer is in org-mode.
 (defun org-link-at-p ()
-  (and (eq major-mode 'org-mode)
-       (let ((face-prop (get-text-property (point) 'face)))
-	 (or (eq face-prop 'org-link)
-	     (and (listp face-prop) (memq 'org-link face-prop))))))
+  (let ((face-prop (get-text-property (point) 'face)))
+    (or (eq face-prop 'org-link)
+	(and (listp face-prop) (memq 'org-link face-prop)))))
 
 ;;; ************************************************************************
 ;;; Private functions
